@@ -73,8 +73,7 @@ def populate():
     session.flush()
     transaction.commit()
 
-def initialize_sql(db_string, db_echo=False):
-    engine = create_engine(db_string, echo=db_echo)
+def initialize_sql(engine):
     DBSession.configure(bind=engine)
     Base.metadata.bind = engine
     Base.metadata.create_all(engine)
@@ -83,6 +82,6 @@ def initialize_sql(db_string, db_echo=False):
     except IntegrityError:
         pass
 
-def appmaker(db_string, db_echo=False):
-    initialize_sql(db_string, db_echo)
+def appmaker(engine):
+    initialize_sql(engine)
     return default_get_root
