@@ -5,8 +5,7 @@ debug_authorization = false
 debug_notfound = false
 debug_templates = true
 default_locale_name = en
-db_string = sqlite:///%(here)s/{{package}}.db
-db_echo = false
+sqlalchemy.url = sqlite:///%(here)s/{{project}}.db
 
 [pipeline:main]
 pipeline =
@@ -18,3 +17,37 @@ pipeline =
 use = egg:Paste#http
 host = 0.0.0.0
 port = 6543
+
+# Begin logging configuration
+
+[loggers]
+keys = root, sqlalchemy
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[logger_root]
+level = INFO
+handlers = console
+
+[logger_sqlalchemy]
+level = INFO
+handlers =
+qualname = sqlalchemy.engine
+# "level = INFO" logs SQL queries.
+# "level = DEBUG" logs SQL queries and results.
+# "level = WARN" logs neither.  (Recommended for production systems.)
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = generic
+
+[formatter_generic]
+format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+# End logging configuration
