@@ -13,10 +13,37 @@ session.key = {{project}}
 session.secret = {{random_string}}
 
 [pipeline:main]
-pipeline = egg:WebError#evalerror
-           {{project}}
+pipeline =
+    egg:WebError#evalerror
+    {{project}}
 
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
 port = 6543
+
+# Begin logging configuration
+
+[loggers]
+keys = root
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[logger_root]
+level = INFO
+handlers = console
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = generic
+
+[formatter_generic]
+format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+# End logging configuration
