@@ -3,15 +3,15 @@ from pyramid.settings import asbool
 
 from pyramid_beaker import session_factory_from_settings
 
+from sqlalchemy import engine_from_config
+
+from {{package}}.models import initialize_sql
+
 def main(global_config, **settings):
     """ This function returns a Pyramid WSGI application.
     """
-    from {{package}}.models import initialize_sql
-    db_string = settings.get('db_string')
-    if db_string is None:
-        raise ValueError("No 'db_string' value in application "
-                         "configuration.")
-    initialize_sql(db_string, asbool(settings.get('db_echo')))
+    engine = engine_from_config(settings, 'sqlalchemy.')
+    initialize_sql(engine)
     config = Configurator(settings=settings)
     session_factory = session_factory_from_settings(settings)
     config.set_session_factory(session_factory)
