@@ -1,13 +1,12 @@
 [app:{{project}}]
 use = egg:{{project}}
 reload_templates = true
-mako.directories = {{package}}:templates
 debug_authorization = false
 debug_notfound = false
 debug_templates = true
 default_locale_name = en
-db_string = sqlite:///%(here)s/tutorial.db
-db_echo = true
+mako.directories = {{package}}:templates
+sqlalchemy.url = sqlite:///%(here)s/{{project}}.db
 session.type = file
 session.data_dir = %(here)s/data/sessions/data
 session.lock_dir = %(here)s/data/sessions/lock
@@ -24,3 +23,37 @@ pipeline =
 use = egg:Paste#http
 host = 0.0.0.0
 port = 6543
+
+# Begin logging configuration
+
+[loggers]
+keys = root, sqlalchemy
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[logger_root]
+level = INFO
+handlers = console
+
+[logger_sqlalchemy]
+level = INFO
+handlers =
+qualname = sqlalchemy.engine
+# "level = INFO" logs SQL queries.
+# "level = DEBUG" logs SQL queries and results.
+# "level = WARN" logs neither.  (Recommended for production systems.)
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = generic
+
+[formatter_generic]
+format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+# End logging configuration
