@@ -1,16 +1,14 @@
 from pyramid.configuration import Configurator
 from pyramid.settings import asbool
+from sqlalchemy import engine_from_config
 
 from {{package}}.models import initialize_sql
 
 def main(global_config, **settings):
     """ This function returns a Pyramid WSGI application.
     """
-    db_string = settings.get('db_string')
-    if db_string is None:
-        raise ValueError("No 'db_string' value in application configuration.")
-    db_echo = settings.get('db_echo', 'false')
-    initialize_sql(db_string, asbool(db_echo))
+    engine = engine_from_config(settings, 'sqlalchemy.')
+    initialize_sql(engine)
     config = Configurator(settings=settings)
     config.add_static_view('static', '{{package}}:static')
     config.add_route('home', '/', view='{{package}}.views.my_view',
